grammar.txt
expression  := sum
sum         := product [("+" | "-") sum]
product     := fraction ["\cdot" product]
fraction    := "\frac{" expression "}{" expression "}" | unary
unary       := (( "\sin"      | "\cos"    | "\tan"    | "\cot"    |
                  "\arcsin"   | "\arccos" | "\arctg"  | "\arcctg" |
                  "\sinh"     | "\cosh"   | "\tanh"   | "\coth"   |
                  "\ln"       | "\sqrt"   | "-") unary) | power
power       := group ["^" power]
group       := ("(" expression ")") | atom
atom        := <number> | <name>
